src/objects/AuditEntry__c.object
<CustomObject>
    <customHelpPage>AuditEntryCsh</customHelpPage>
    <fields>
        <fullName>AuditGroup__c</fullName>
        <inlineHelpText>What Audit Group is this entry written into?</inlineHelpText>
        <label>Audit Group</label>
        <referenceTo>AuditGroup__c</referenceTo>
        <relationshipLabel>Audit Entries</relationshipLabel>
        <relationshipName>AuditEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EntryPointUuid__c</fullName>
        <inlineHelpText>What was the entry point UUID assigned to this message when it first entered a sequence?</inlineHelpText>
        <label>Entry Point UUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <inlineHelpText>What were the event parameters saved by the AuditWriter Process?</inlineHelpText>
        <label>Event</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GroupIdentifier__c</fullName>
        <formula>AuditGroup__r.GroupIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>XXX</inlineHelpText>
        <label>Group Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hops__c</fullName>
        <inlineHelpText>How many hops were there when this entry was written?</inlineHelpText>
        <label>Hops</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Step__r.Position__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What position in the sequence was the AuditWriter Step that the message passed through?</inlineHelpText>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sequence</label>
        <referenceTo>Sequence__c</referenceTo>
        <relationshipLabel>Audit Entries</relationshipLabel>
        <relationshipName>AuditEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stamp__c</fullName>
        <formula>AuditGroup__r.Stamp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>XXX</inlineHelpText>
        <label>Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What AuditWriter Step did the message pass through?</inlineHelpText>
        <label>Step</label>
        <referenceTo>Step__c</referenceTo>
        <relationshipLabel>Audit Entries</relationshipLabel>
        <relationshipName>AuditEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit Entry</label>
    <nameField>
        <label>Audit Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>